# BrawlGPT

./: .gitignore  .gitignore.jelastic  ENV_CONFIG.md  ENV_SETUP.md  FIXED_IP_TROUBLESHOOTING.md  HARDCODED_URLS_FIX.md  HEALTHCHECK_FIX.md  JELASTIC_DEPLOYMENT.md  JELASTIC_FRONTEND_FIX.md  JELASTIC_NGINX_SETUP.md  README.md  deploy-jelastic.sh  docker-compose.override.yml  docker-compose.yml  manifest-compose-fixed-ip.jps  manifest-compose.jps  manifest.jps  rebuild-frontend.sh
backend/: .env.example  Dockerfile  agent.py  agent_tools.py  ai_analyst.py  analyze_history.py  analyzer.py  auth.py  brawlstars.py  cache.py  cache_redis.py  config.py  crawler.py  database.py  db_models.py  exceptions.py  logging_config.py  main.py  models.py  pyproject.toml  rate_limiter.py  requirements-dev.txt  requirements.txt  resilience.py  websocket_manager.py
backend/core/: __init__.py  config.py  exceptions.py  security.py
backend/infrastructure/: __init__.py  cache.py  resilience.py  websocket.py
backend/routers/: clubs.py  crawler.py  scheduler.py  users.py
backend/services/: __init__.py  club_service.py  counter_pick_service.py  global_meta_aggregator.py  map_intelligence_service.py  meta_collector.py  synergy_analyzer.py  team_synergy_service.py  trend_detector.py
backend/services/ai/: __init__.py
backend/services/game/: __init__.py  counter_pick.py  team_builder.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_brawlstars.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  (+2 more)
(+65 files in other folders)
